   Updated tests to ensure this functionality continues to work in the future.
   http://sourceforge.net/forum/forum.php?thread_id=1108433&forum_id=129584
 o Corrected bug [991033] Data type 0x32 is unknown error with SQL Server 2005;
   SYBBITN values are now properly formed and are no longer sent as SYBBIT
   when they are not null.

07/13/2004 - Brian Heineman
 o Corrected bug [989963] BigInt becomes Numeric;
   ResultSetMetaData.getColumnType(int) now returns Types.BIGINT. Added tests
   to ensure this functionality continues to work in the future.
 o Added test for bug [989399] bug? blob.getBytes() from 0
 o Updated ResultSetMetaData.getColumnType(int) to return Types.BOOLEAN for BIT
   columns when using a 1.4+ JRE; returns Types.BIT otherwise.  Added tests
   to ensure this functionality continues to work in the future.

07/12/2004 - Brian Heineman
 o Removed JNetDirect performance results to comply with their licensing.

07/08/2004 - Brian Heineman
 o Added test for bug [983561] getDatetimeValue truncates fractional
   milliseconds.

07/07/2004 - Brian Heineman
 o Added test for bug [974036] Bug in 0.8rc1 DatabaseMetaData method
   getTableTypes()
 o Corrected bug [985956] Cannot setObject(null) on image; Added test to ensure
   this functionality continues to work in the future.
 o Added test for feature request [956800] setNull(): Not implemented
 o Corrected bug [919477] Large LOB data causes OutOfMemoryError; Blob/Clob
   data is now buffered to disk for reads as well as writes if the data
   exceeds 32KB.
 o Reduced amount of time Blob/Clob objects are locked due to synchronization.
 o READTEXT support has been temporarily disabled.  This feature will be
   enabled again once code is in place to control the in-memory buffering via
   a connection property and WRITETEXT support is added.
 o Added test for bug [939206] TdsException: can't sent this BigDecimal
 o Added test for bug [946171] null boolean in CallableStatement bug